--- a/EID444HW4-Mohammed Rhakib.ipynb
+++ b/EID444HW4-Mohammed Rhakib.ipynb
@@ -16,9 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning on use of the timeseries module: If the inherent timescales of the system are long compared to those being analyzed, this statistical inefficiency may be an underestimate.  The estimate presumes the use of many statistically independent samples.  Tests should be performed to assess whether this condition is satisfied.   Be cautious in the interpretation of the data.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -28,6 +35,24 @@
       "Requirement already satisfied: scipy in c:\\users\\mo241\\anaconda3\\lib\\site-packages (from pymbar) (1.13.1)\n",
       "Requirement already satisfied: numexpr in c:\\users\\mo241\\anaconda3\\lib\\site-packages (from pymbar) (2.8.7)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "****** PyMBAR will use 64-bit JAX! *******\n",
+      "* JAX is currently set to 32-bit bitsize *\n",
+      "* which is its default.                  *\n",
+      "*                                        *\n",
+      "* PyMBAR requires 64-bit mode and WILL   *\n",
+      "* enable JAX's 64-bit mode when called.  *\n",
+      "*                                        *\n",
+      "* This MAY cause problems with other     *\n",
+      "* Uses of JAX in the same code.          *\n",
+      "******************************************\n",
+      "\n"
      ]
     }
    ],
@@ -84,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,16 +561,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mo241\\AppData\\Local\\Temp\\ipykernel_19368\\606405066.py:4: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\mo241\\AppData\\Local\\Temp\\ipykernel_372\\606405066.py:4: RuntimeWarning: divide by zero encountered in divide\n",
       "  FRR = 4 * epsilon * (-12 * (sigma / rij) ** 13 + 6*(sigma/rij)**7) / sigma #LJ Force equation\n",
-      "C:\\Users\\mo241\\AppData\\Local\\Temp\\ipykernel_19368\\606405066.py:4: RuntimeWarning: invalid value encountered in add\n",
+      "C:\\Users\\mo241\\AppData\\Local\\Temp\\ipykernel_372\\606405066.py:4: RuntimeWarning: invalid value encountered in add\n",
       "  FRR = 4 * epsilon * (-12 * (sigma / rij) ** 13 + 6*(sigma/rij)**7) / sigma #LJ Force equation\n"
      ]
     }
@@ -952,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
